--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Red panda</title>
 </head>
 <body>
-    <h1><a href="web.html"> Red panda</a><a href="appearance.html"> Appearance</a><a href="food.html"> Food</a><a href="facts.html"> Facts</a></h1>
+    <h1><a href="index.html"> Red panda</a><a href="appearance.html"> Appearance</a><a href="food.html"> Food</a><a href="facts.html"> Facts</a></h1>
     <p> There are not many red pandas left.</p>
 </body>
 </html>
