--- a/appearance.html
+++ b/appearance.html
@@ -5,7 +5,7 @@
     <title>Red panda</title>
 </head>
 <body>
-    <h1><a href="web.html"> Red panda</a><a href="appearance.html"> Appearance</a><a href="food.html"> Food</a><a href="facts.html"> Facts</a></h1>
+    <h1><a href="index.html"> Red panda</a><a href="appearance.html"> Appearance</a><a href="food.html"> Food</a><a href="facts.html"> Facts</a></h1>
     <p> Red pandas are brown red and white.<br>They live 8 - 12 years.<br>They weight 3kg - 6.2kg.<br>They are 60cm - 120cm.</p>
 </body>
 </html>
